--- a/style.css
+++ b/style.css
@@ -2,25 +2,43 @@ body {
   color: black;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+}
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  body {
+    font-size: 18px;
+  }
+  .container {
+    max-width: 70vw !important;
+  }
+}
+@media only screen and (min-width: 992px) {
+  body {
+    font-size: 20px;
+  }
+  .container {
+    max-width: 60vw !important;
+  }
 }
 .container {
-  max-width: 720px;
+  max-width: 80vw;
   margin: auto;
-  padding: 32px;
+  padding-top: 10vh;
+  padding-bottom: 40vh;
 }
 h1 {
   font-weight: normal;
 }
 h2 {
-  margin-top: 40px;
+  margin-top: 8vh;
 }
 h3 {
-  margin-top: 30px;
+  margin-top: 6vh;
 }
 a {
   color: blue;
 }
-p {
+p, li {
   line-height: 2;
 }
 dt {
@@ -29,10 +47,7 @@ dt {
   margin-top: 16px;
   line-height: 2;
 }
-li {
-  line-height: 2;
-}
 a.back {
-  margin-bottom: 60px;
+  margin-bottom: 6vh;
   display: block;
 }
